# ray-tracer-cpp

./: CMakeLists.txt  main.cpp
Google_tests/: CMakeLists.txt  enumUtils_tests.cpp  point_tests.cpp  rand_tests.cpp  vec3_tests.cpp  vec3wrapper_tests.cpp  vec_tests.cpp
Google_tests/lib/docs/reference/: mocking.md
src/: CMakeLists.txt  anti_aliasing.h  camera.h  ray.h  ray_tracer.h
src/hittable/: hit_record.h  hittable.h  hittable_container.cpp  hittable_container.h  hittable_variant.cpp  hittable_variant.h  plane.cpp  plane.h  sphere.cpp  sphere.h
src/material/: lambertian.cpp  lambertian.h  material.h  material_variant.cpp  material_variant.h  mirror.cpp  mirror.h  refraction.cpp  refraction.h
src/utils/: color.h  common.h  enum_utils.h  point.h  rand_utils.cpp  rand_utils.h  vec.cpp  vec.h  vec3.cpp  vec3.h
